# hark

./: .gitignore  CHANGELOG.md  CONTEXT.md  README.md  RELEASE.md  SESSION_NOTE.md  install.sh  pyproject.toml
.backlog/: .context.yaml  AGENTS.md  index.yaml
.backlog/01-architecture-revamp-1-grok/: index.yaml
.backlog/bugs/: B001-test-openai-tts-stt-and-minima.todo  B002-rust-client-parity-with-python.todo  B003-radio-soft-end-phrase-detectio.todo  B004-true-overlapping-listen-pre-ar.todo  B005-herdr-wire-fixtures-from-real.todo  B006-harkd-daemon-not-v1.todo  B007-smart-turn-better-endpointing.todo  B008-ambient-wake-offline-re-decode.todo  B009-multi-session-voice-queue-ux-p.todo  B010-auto-pause-ambient-when-ask-li.todo  B011-mode-a-agent-must-arm-herdr-wa.todo  B012-empty-stt-after-tts-false-spee.todo  B013-wave-hardware-mute-vs-pactl-mu.todo  B014-socket-watch-broken-pipe-noisy.todo  B015-mode-a-pids-duplicate-ambient.todo  B017-hold-announcements-when-video.todo  B018-reply-send-text-must-submit-wi.todo  B019-surface-plausible-failed-wake.todo  B020-test-custom-activation-phrase.todo  B021-add-install-sh-for-one-line-co.todo  B022-npx-skills-npm-package-distrib.todo  B023-homepage-install-command-picke.todo  B024-move-github-remote-clankercode.todo  B025-check-for-any-all-references-t.todo  B026-suggest-my-pi-monitor-and-open.todo  B027-run-docs-audit-and-fix.todo  B028-investigate-recent-ci-runs-and.todo  B029-must-detect-self-if-running-fr.todo  B030-add-og-social-tags-and-images.todo  B031-post-wake-listen-no-speech-aft.todo  B032-bare-herald-hark-tokens-miss-w.todo  B033-continuous-ambient-emits-ambie.todo  B034-the-startup-tts-should-be-cach.todo  B035-validate-smart-turn-v3-onnx-en.todo  B036-watch-config-toml-and-live-rel.todo  B037-radio-mode-shorter-silence-for.todo  B038-log-every-stt-upload-request-i.todo  B039-radio-partials-lag-chunk-poorl.todo  B040-mode-a-monitors-miss-ambient-w.todo  B041-the-main-binary-should-have-a.todo  (+131 more)
docs/: ACCEPTANCE.md  AGY.md  ARCHITECTURE.md  AUDIO_DESIGN.md  BRANDING_SOURCE.md  CUSTOM_WAKE.md  DASHBOARD.md  DECISIONS.md  ENDPOINTING.md  EXAMPLE_SESSION.md  HARKD.md  HERDR.md  IMPLEMENTATION.md  NAMING.md  OPEN_QUESTIONS.md  PRIOR_ART.md  PRODUCT.md  PROTOCOL.md  PROVIDERS.md  REPO_TRANSFER.md  SAFETY.md  SPEC.md
fixtures/: MANIFEST.json  README.md
prototype/: herdr_event_monitor.py
schemas/: event-v1.schema.json
scripts/: build-webui.sh  cache-common-tts.sh  capture-herdr-fixtures.sh  capture-herdr-schema.sh  download-sherpa-kws-model.sh  download-vosk-model.sh  eval-wake-fixtures.py  export-fixtures.sh  gen-tts-samples.py  gen-wake-eval-fixtures.py  hark-agy-deliver.sh  release-npm.sh  rewrite-github-urls.sh  run-mode-a.sh  setup-ambient.sh
site/: CNAME  README.md  index.html  llms.txt  og-image.html  render-og-image.mjs  setup.html
skill/: SKILL.md
skills/: handsfree  hark
tests/: confirm_security_corpus.py  confirm_unicode_cases.py  conftest.py  test_agentapi.py  test_agents_resolve.py  test_ambient_conversation.py  test_ambient_learned_reload.py  test_ambient_record_cues.py  test_ambient_streaming.py  test_ambient_timeout.py  test_ambient_wake.py  test_answer_arm_cue.py  test_answer_window_radio.py  test_answer_window_silence.py  test_answerability_core.py  test_answerability_false_done_delivery.py  test_answerability_live.py  test_ask_capture_deadline.py  test_ask_interrupt.py  test_ask_provider_errors.py  test_auth_discovery.py  test_boot_tts.py  test_busy_subagent.py  test_cli_agent_start.py  test_cli_answer.py  test_conference.py  test_config_endpoint.py  test_config_warnings.py  test_config_watch.py  test_confirm.py  test_cues.py  test_custom_triggers.py  test_custom_wake_e2e.py  test_daemon.py  test_dashboard_contract.py  test_dashboard_dictation.py  test_dashboard_server.py  test_dashboard_tailer.py  test_debug_snips.py  test_delivery.py  (+72 more)
webui/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
(+303 files in other folders)
