[project]
name = "hark"
version = "0.1.0"
description = "Voice bridge for coding agents in Herdr — when your agents need a word."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Hark" }]
dependencies = [
  "httpx>=0.27",
  "numpy>=1.26",
  "sounddevice>=0.5",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  # dashboard contract fixtures (B060); runtime stays stdlib-only
  "jsonschema>=4.21",
]
wake = [
  "vosk>=0.3.45",
]
# Optional Smart Turn endpointing (B007). Default install stays lean; the
# energy gate needs none of this. See docs/ENDPOINTING.md.
smart-turn = [
  "onnxruntime>=1.17",
  "transformers>=4.0",
]

[project.scripts]
hark = "hark.cli:main"
harkd = "hark.daemon:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hark"]
# webui bundle staged by scripts/build-webui.sh (gitignored; ship it anyway)
artifacts = ["src/hark/dashboard/webui_dist/**"]

[tool.uv]
package = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
  "vosk: optional offline Vosk re-decode tests (needs model + vosk extra)",
  "sherpa_kws: optional Sherpa-ONNX KWS wake eval (B070 backend + model; skip if absent)",
]
